--- a/css/style.css
+++ b/css/style.css
@@ -80,14 +80,15 @@ input[type="radio"].visually-hidden {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin-top: 20px;
+  margin-top: 27px;
   margin-bottom: 20px;
-  padding-left: 30px;
-  padding-right: 24px;
+  padding-left: 40px;
+  padding-right: 15px;
   background-color: #f9f5f0;
 }
 
 .caption-button h2 {
+  margin-left: -10px;
   font-size: 30px;
   text-transform: uppercase;
   font-weight: normal;
@@ -95,7 +96,7 @@ input[type="radio"].visually-hidden {
 }
 
 .button {
-  min-width: 197px;
+  min-width: 195px;
   height: 38px;
   position: relative;
   font-family: "Cuprum", "Arial Narrow", sans-serif;
@@ -109,14 +110,14 @@ input[type="radio"].visually-hidden {
 }
 
 .wide-button {
-  width: 253px;
+  width: 160px;
 }
 
 .button-link {
   padding-top: 10px;
   padding-bottom: 10px;
-  padding-left: 40px;
-  padding-right: 40px;
+  padding-left: 15px;
+  padding-right: 10px;
   font-family: "Cuprum", "Arial Narrow", sans-serif;
   font-size: 14px;
   line-height: 40px;
@@ -226,8 +227,8 @@ input[type="radio"].visually-hidden {
 
 .search-label {
   position: absolute;
-  top: 12px;
-  left: 49px;
+  top: 11px;
+  left: 42px;
   color: #ffffff;
 }
 
@@ -284,7 +285,7 @@ input[type="radio"].visually-hidden {
 
 .bookmarks {
   display: flex;
-  margin-right: 25px;
+  margin-right: 30px;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -308,7 +309,7 @@ input[type="radio"].visually-hidden {
 .cart {
   display: flex;
   margin-right: 0px;
-  padding-right: 20px;
+  padding-right: 14px;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -324,7 +325,7 @@ input[type="radio"].visually-hidden {
   height: 17px;
   vertical-align: middle;
   padding-right: 5px;
-  padding-left: 10px;
+  padding-left: 5px;
   background: url("../img/icon-cart.svg") no-repeat;
   opacity: 0.3;
   content: "";
@@ -370,10 +371,9 @@ input[type="radio"].visually-hidden {
 }
 
 .slogan {
-  width: 200px;
-  margin-top: 0px;
-  margin-right: 40px;
-  padding-left: 52px;
+  width: 250px;
+  margin-top: -3px;
+  padding-left: 32px;
   font-family: "Cuprum", "Arial Narrow", sans-serif;
   font-style: italic;
   font-size: 16px;
@@ -384,7 +384,7 @@ input[type="radio"].visually-hidden {
 .contacts-header div {
   width: 265px;
   min-height: 30px;
-  margin-right: 20px;
+  margin-right: 5px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -394,10 +394,10 @@ input[type="radio"].visually-hidden {
 }
 
 .contacts-header a {
-  padding-top: 5px;
-  padding-bottom: 10px;
+  padding-top: 6px;
+  padding-bottom: 5px;
   padding-left: 10px;
-  padding-right: 50px;
+  padding-right: 22px;
   text-decoration: none;
   font-size: 21px;
   line-height: 21px;
@@ -409,7 +409,7 @@ input[type="radio"].visually-hidden {
   width: 20px;
   height: 19px;
   vertical-align: middle;
-  margin-right: 40px;
+  margin-right: 15px;
   margin-left: 0px;
   padding-left: 0px;
   background: url("../img/icon-phone.svg") no-repeat;
@@ -419,7 +419,7 @@ input[type="radio"].visually-hidden {
 
 .contacts-header address {
   margin-top: 10px;
-  margin-right: 20px;
+  margin-right: 10px;
   text-align: center;
   text-decoration: none;
   font-style: normal;
@@ -439,7 +439,7 @@ input[type="radio"].visually-hidden {
 .account-link {
   height: 35px;
   display: block;
-  margin-left: 10px;
+  margin-left: 15px;
   padding-top: 8px;
   padding-left: 24px;
   padding-right: 24px;
@@ -462,8 +462,8 @@ input[type="radio"].visually-hidden {
   display: inline-block;
   width: 20px;
   height: 18px;
-  margin-right: 2px;
-  padding-right: 10px;
+  margin-left: 8px;
+  padding-right: 18px;
   vertical-align: middle;
   background: url("../img/icon-user.svg") no-repeat;
   content: "";
@@ -476,7 +476,7 @@ input[type="radio"].visually-hidden {
   vertical-align: middle;
   margin-right: 0px;
   padding-left: 0px;
-  padding-right: 17px;
+  padding-right: 10px;
   background: url("../img/icon-login.svg") no-repeat;
   background-position: 0px 0px;
   content: "";
@@ -485,10 +485,9 @@ input[type="radio"].visually-hidden {
 .account-user {
   height: 35px;
   display: block;
-  margin-left: 3px;
   padding-top: 10px;
-  padding-left: 13px;
-  padding-right: 26px;
+  padding-left: 8px;
+  padding-right: 15px;
   font-size: 21px;
   line-height: 21px;
   text-decoration: none;
@@ -500,9 +499,9 @@ input[type="radio"].visually-hidden {
   display: block;
   width: 20px;
   height: 45px;
-  padding: 0px 11px;
+  padding: 0px 12px;
   background: url("../img/icon-logout.svg") no-repeat;
-  background-position: 11px 12px;
+  background-position: 7px 12px;
   background-color: #ffffff;
 }
 
@@ -513,7 +512,7 @@ input[type="radio"].visually-hidden {
   flex-wrap: wrap;
   justify-content: space-between;
   margin-top: 5px;
-  margin-left: 20px;
+  margin-left: 42px;
 }
 
 .account-active::before {
@@ -561,7 +560,7 @@ input[type="radio"].visually-hidden {
 .breadcrumbs-link {
   padding-top: 5px;
   padding-bottom: 10px;
-  margin-left: 19px;
+  margin-left: 15px;
   text-decoration: none;
   color: #000000;
 }
@@ -570,7 +569,7 @@ input[type="radio"].visually-hidden {
   display: inline-block;
   width: 8px;
   height: 12px;
-  margin-right: 13px;
+  margin-right: 18px;
   vertical-align: middle;
   background: url("../img/icon-right-small.svg") no-repeat;
   content: "";
@@ -960,9 +959,9 @@ input[type="radio"].visually-hidden {
 
 .features-slider-button {
   margin: auto;
-  margin-left: 25px;
-  margin-bottom: 22px;
-  min-width: 195px;
+  margin-left: 24px;
+  margin-bottom: 27px;
+  min-width: 193px;
   min-height: 38px;
   padding: 0;
 }
@@ -1010,9 +1009,9 @@ input[type="radio"].visually-hidden {
 }
 
 .catalog-filter button[type="submit"] {
-  width: 140px;
+  width: 220px;
   height: 38px;
-  margin-top: 50px;
+  margin-top: 10px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 13px;
   text-transform: uppercase;
@@ -1136,7 +1135,7 @@ input[type="radio"].visually-hidden {
   width: 220px;
   margin-left: auto;
   margin-right: 10px;
-  padding-top: 23px;
+  padding-top: 20px;
   padding-left: 0px;
   text-transform: uppercase;
   font-size: 17px;
@@ -1145,6 +1144,7 @@ input[type="radio"].visually-hidden {
 }
 
 .filter-brand ul {
+  margin-top: 20px;
   margin-bottom: 10px;
   padding: 0px;
   list-style-type: none;
@@ -1168,6 +1168,7 @@ input[type="radio"].visually-hidden {
 }
 
 .filter-charging ul {
+  margin-top: 28px;
   padding: 0px;
   list-style-type: none;
 }
@@ -1268,9 +1269,9 @@ input[type="radio"].visually-hidden {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-top: 0px;
-  margin-bottom: 15px;
-  padding-left: 20px;
+  margin-top: -2px;
+  margin-bottom: 23px;
+  padding-left: 22px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 13px;
   line-height: 18px;
@@ -1280,9 +1281,9 @@ input[type="radio"].visually-hidden {
 .sorting-type {
   min-width: 350px;
   min-height: 20px;
-  margin-left: 20px;
   margin-right: 10px;
   margin-bottom: 0px;
+  padding-left: 0px;
   padding-bottom: 0px;
   display: flex;
   flex-direction: row;
@@ -1308,15 +1309,15 @@ input[type="radio"].visually-hidden {
 }
 
 .sorting-type li:nth-child(1) {
-  margin-right: 51px;
+  margin-right: 50px;
 }
 
 .sorting-type li:nth-child(2) {
-  margin-right: 42px;
+  margin-right: 45px;
 }
 
 .sorting-type li:nth-child(3) {
-  margin-right: 0px;
+  margin-right: 5px;
 }
 
 .sorting-arrow-up a {
@@ -1370,7 +1371,7 @@ input[type="radio"].visually-hidden {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 
 .product-item {
@@ -1382,7 +1383,7 @@ input[type="radio"].visually-hidden {
   align-items: center;
   justify-content: space-between;
   position: relative;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
   padding-top: 0px;
   padding-bottom: 10px;
   font-family: "PT Sans", "Arial", sans-serif;
@@ -1393,7 +1394,7 @@ input[type="radio"].visually-hidden {
   border: 1px #eaeaea solid;
 }
 
-.product-item:nth-child(1n) {
+/* .product-item:nth-child(1n) {
   margin-left: 0px;
   margin-right: 17px;
 }
@@ -1405,11 +1406,11 @@ input[type="radio"].visually-hidden {
 .product-item:nth-child(3n) {
   margin-left: 0px;
   margin-right: 0px;
-}
+} */
 
 .product-photo {
-  width: 218px;
-  height: 170px;
+  width: 210px;
+  height: 172px;
   z-index: 1;
 }
 
@@ -1429,17 +1430,17 @@ input[type="radio"].visually-hidden {
 
 .product-mark {
   position: absolute;
-  top: 15px;
+  top: 20px;
   right: 0px;
   z-index: 11;
   width: 200%;
-  font-size: 15px;
+  font-size: 13px;
   font-weight: 400;
   line-height: 25px;
   color: #ffffff;
-  text-transform: lowercase;
+  text-transform: uppercase;
   transform: translateX(50%) rotate(45deg);
-  transform-origin: 50% -15px;
+  transform-origin: 50% -20px;
   background-color: #ee3643;
   user-select: none;
 }
@@ -1473,7 +1474,7 @@ input[type="radio"].visually-hidden {
 .product-availability {
   width: 217px;
   min-height: 100px;
-  padding-top: 36px;
+  padding-top: 32px;
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -1484,7 +1485,7 @@ input[type="radio"].visually-hidden {
 }
 
 .product-item:hover {
-  box-shadow: 0 10px 25px rgba(41, 52, 73, 0.5);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
 }
 
 .product-availability:focus-within,
@@ -1525,7 +1526,7 @@ input[type="radio"].visually-hidden {
   height: 17px;
   position: absolute;
   top: 11px;
-  left: 15px;
+  left: 30px;
   background: url("../img/icon-cart.svg") no-repeat;
   opacity: 0.3;
   content: "";
@@ -1538,11 +1539,11 @@ input[type="radio"].visually-hidden {
 .buy-link {
   padding-top: 0px;
   padding-bottom: 10px;
-  padding-left: 23px;
-  padding-right: 17px;
+  padding-left: 30px;
+  padding-right: 10px;
   font-family: "Cuprum", "Arial Narrow", sans-serif;
   font-size: 14px;
-  line-height: 40px;
+  line-height: 36px;
   text-decoration: none;
   text-transform: uppercase;
   color: #ffffff;
@@ -1589,9 +1590,8 @@ input[type="radio"].visually-hidden {
 }
 
 .description-perforator {
-  min-height: 260px;
+  min-height: 223px;
   padding-top: 39px;
-  margin-bottom: -36px;
 }
 
 /* Популярные товары и популярные производители */
@@ -1601,7 +1601,7 @@ input[type="radio"].visually-hidden {
 
 .popular-product tbody {
   width: 940px;
-  margin-bottom: -20px;
+  margin-bottom: 20px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -1615,20 +1615,20 @@ input[type="radio"].visually-hidden {
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-between;
-  margin-bottom: 70px;
+  margin-bottom: 55px;
   padding: 0px;
   list-style-type: none;
 }
 
 .brands-list {
   width: 220px;
-  height: 140px;
+  height: 150px;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  margin-bottom: 20px;
+  margin-bottom: 12px;
   border: 1px #eaeaea solid;
 }
 
@@ -1655,9 +1655,10 @@ input[type="radio"].visually-hidden {
 }
 
 .turn-pages {
-  width: 284px;
+  width: 287px;
   max-width: 700px;
   min-height: auto;
+  margin-top: 18px;
   margin-bottom: 60px;
   margin-left: 0px;
   padding-left: 0px;
@@ -1672,7 +1673,7 @@ input[type="radio"].visually-hidden {
   color: #000000;
   padding-top: 10px;
   padding-bottom: 10px;
-  padding-left: 15px;
+  padding-left: 16px;
   padding-right: 15px;
   font-size: 13px;
   line-height: 18px;
@@ -1738,9 +1739,9 @@ input[type="radio"].visually-hidden {
 
 /* Сервисы - вкладки: Доставка, Гарантия, Кредит */
 .service {
-  margin-bottom: 50px;
+  margin-bottom: 45px;
   padding-top: 35px;
-  padding-bottom: 20px;
+  padding-bottom: 17px;
 }
 
 .service-info {
@@ -1784,7 +1785,7 @@ input[type="radio"].visually-hidden {
   margin-top: 10px;
   margin-bottom: 25px;
   padding-left: 60px;
-  font-size: 36px;
+  font-size: 30px;
   font-weight: normal;
   text-transform: uppercase;
   color: #32425c;
@@ -1864,7 +1865,7 @@ input[type="radio"].visually-hidden {
   min-height: 280px;
   background: url("../img/service-delivery.png") no-repeat;
   background-position-x: 230px;
-  background-position-y: 40px;
+  background-position-y: 35px;
   background-color: #f4f7f9;
 }
 
@@ -1920,15 +1921,15 @@ input[type="radio"].visually-hidden {
 
 .content-list {
   width: 100%;
-  margin-top: -14px;
-  margin-bottom: 20px;
+  margin-top: -30px;
+  margin-bottom: 10px;
   padding: 0px;
   list-style-type: none;
 }
 
 .content-list-item {
   font-size: 18px;
-  line-height: 40px;
+  line-height: 38px;
 }
 
 .content-list-item::before {
@@ -1942,23 +1943,28 @@ input[type="radio"].visually-hidden {
 }
 
 .description {
-  max-width: 540px;
-  min-height: 400px;
+  max-width: 450px;
+  min-height: 350px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-right: 100px;
-  padding-bottom: 84px;
+  margin-right: 190px;
+  padding-bottom: 70px;
 }
 
 .description p {
   font-size: 13px;
+  margin-bottom: 25px;
+}
+
+.description .button {
+  min-width: 220px;
 }
 
 .page-map {
   max-width: 300px;
-  padding-bottom: 80px;
+  padding-bottom: 65px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -1967,12 +1973,12 @@ input[type="radio"].visually-hidden {
 
 .page-map .content-text {
   width: 200px;
-  margin-top: 0px;
-  padding-top: 0px;
+  margin-top: -5px;
+  margin-bottom: 25px;
 }
 
 .page-map-img {
-  margin-bottom: 30px;
+  margin-bottom: 15px;
   background: #ffffff;
 }
 
@@ -2147,7 +2153,6 @@ input[type="radio"].visually-hidden {
   top: 25px;
   left: 0px;
   background: url("../img/checked-popup.svg") no-repeat;
-  /* background-color: #ffffff; */
   border: 0px;
   content: "";
 }
@@ -2272,7 +2277,7 @@ input[type="radio"].visually-hidden {
 }
 
 .contacts-footer address {
-  margin-top: 0px;
+  margin-top: -5px;
   margin-left: 2px;
   font-family: "Cuprum", "Arial Narrow", sans-serif;
   font-weight: normal;
